--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <title>Drum Kit</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="css/index.css">
   <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
 </head>
 
@@ -23,9 +23,7 @@
 </div>
 
 
-<footer>
-
-</footer>
+<script src="js/index.js"></script>
 </body>
 
 </html>
